# abstractinator

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  base_config.py  bundle_hf_dataset.py  config.py  data_utils.py  entropy_train.py  evaluate.py  expand_codebook.py  experiment plan.md  gaussian_train.py  notes.md  notes.txt  pyproject.toml  requirements-dev.txt  requirements.txt  segment_dataset.py  super_tiny_config.py  tiny_config.py  train.py  vq_notes.txt
.github/workflows/: precommit.yml
components/: __init__.py  abstractinator.py  abstractinator_pyramid.py  byte_segment_compressor.py  checkpoint_utils.py  code_sequence_transformer.py  config_types.py  expander.py  gaussian_transformer.py  hae_lm.py  hierarchical_autoencoder.py  learned_query_attention.py  metrics.py  mla.py  residual_code_bridge.py  rope.py  segment_compressor.py  seq2seq_expander.py  sliding_window_attention.py  swiglu.py  tokenizer.py  utils.py  vector_quantizer.py
components/attention/: README.md  __init__.py  base.py  cache.py  factory.py  masks.py
components/attention/backends/: flex.py  sdpa.py
components/attention/forms/mla/: core.py  cross_segment.py  full_self.py  impl.py  segment_cross.py  self.py  sliding_self.py
components/attention/forms/regular/: __init__.py  adapter.py  cross_segment.py  cross_segment_flex.py  cross_segment_sdpa.py  flex_self.py  full_self.py  local_impl.py  segment_cross.py  self.py  self_sdpa.py  sliding.py  sliding_sdpa.py  (+1 more)
components/attention/pooling/: learned_query.py
components/attention/sdpa/: adapter.py  block.py  cross_segment.py  local.py
configs/: __init__.py  base_config.py  config.py  stage1_super_tiny_config.py  stage2_super_tiny_config.py  super_tiny_config.py  tiny_config.py
experiments/: base_stage1.py  base_stage2.py  base_topLM.py  exp_config.py  mla_flex.py  mla_sdpa.py  regular_flex.py  regular_flex_512.py  regular_flex_512_entropy_frozen.py  regular_flex_L0_frozen.py  regular_flex_entropy512_frozen.py  regular_flex_entropy_frozen.py  regular_sdpa.py  stage1_small.py  stage1_super_tiny.py  stage2_super_tiny.py  super_tiny.py  tiny.py
legacy/: old_sliding_window_attn.py  seq2seq_expander.py
tests/: __init__.py  test_base_component_loading.py  test_compression_loss.py  test_continuous_transformer.py  test_expander_continuous_training.py  test_generation.py  test_patch_throughput_ratio.py  test_sliding_window_cross_attention.py  test_top_lm_cross_entropy.py  test_top_lm_padding.py  test_utils.py  test_vector_quantizer.py  test_vq_reset_interval.py
