[project]
name = "abstractinator"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.0.0",
    "lm-eval>=0.4.9",
    "mlflow>=3.1.4",
    "torch>=2.7.1",
    "transformers>=4.53.3",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5.0",
    "pytest>=8.0.0",
]

[tool.ruff]
target-version = "py312"
line-length = 120
exclude = [
    ".venv",
    ".git",
    "mlruns",
    "checkpoints",
    "__pycache__",
]

[tool.ruff.lint]
# Enforce pycodestyle/pyflakes plus import sorting
select = ["E", "F", "I"]
# Keep naming rules relaxed (we’re not selecting N)
ignore = ["N803", "N806", "N812"]
fixable = ["E", "F", "I"]

[tool.ruff.format]
quote-style = "preserve"
indent-style = "space"
skip-magic-trailing-comma = false
docstring-code-format = true
